# SunVRVR

./: CMakeLists.txt  canvas.cpp  canvas.h  cuda_box.h  cuda_camera.h  cuda_ray.h  cuda_utils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pathtracer.cu  pathtracer.h  transferfunction.cpp  transferfunction.h
